<resources>
    <string name="app_name">CRS WATER TAPS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_Cart">Cart</string>
    <string name="title_More">More</string>
    <string name="model">Model</string>
    <string name="series">Series</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="remove">Remove</string>
    <string name="company_name">Company/Shop Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gstNumber">GST Number</string>
    <string name="fullAddress">Full Address</string>
    <string name="pinCode">Pin Code</string>
    <string name="customerDetails">Customer Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="back">Back To Login</string>
    <string name="login">Login</string>
    <string name="create">CREATE NEW ACCOUNT</string>
    <string name="msg">Alert Message</string>
    <string name="about">Welcome to crswatertaps.com, one of the best quality of taps are found in our factory, for us quality in our taps priority. Keeping the requirement of our clients in mind we take entire bit of area in ensuring the quality of the matrials will be high which leads to great performance before selling product in markets. The factory in based on banglore Karnataka india. we use modern technology in order to manufacture the best quality of taps the unit has micro processor eontorolled injection modeling machine operated by highly trained plastic engineers . Various attaroctiae colors of taps are present which attracts the customers . we not only care about the looks of our products ,the moto of our factory is customer satisfaction ,CRS work with a customer contoric approach and care in taken to given our customer a pleasant experience every time they deal with us.</string>
    <string name="address">#1, 3rd Cross kaveri layout sonnenhalli main road, kodigehalli,kadugodi post, banglore-560067</string>

</resources>
