<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/model"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewModel"
                android:layout_marginLeft="69dp"
                android:layout_marginTop="-29dp"
                android:layout_toRightOf="@id/imageView"
                android:text="13.3 Inch, 256 GB"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewModel"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@id/imageView"
                android:background="@color/colorPrimary"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/series"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/series1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSeries"
                android:layout_marginLeft="91dp"
                android:layout_marginTop="-21dp"
                android:layout_toRightOf="@id/imageView"
                android:text="Series"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSeries"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/quantity"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewQuantity"
                android:layout_marginLeft="94dp"
                android:layout_marginTop="-31dp"
                android:layout_toRightOf="@id/imageView"
                android:text="quantity"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPrice"
                android:text="@string/price"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/imageView"
                android:layout_below="@id/textViewQuantity"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewPrice"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="-36dp"
                android:layout_toRightOf="@id/imageView"
                android:text="price"
                android:textSize="22sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>